--- a/detectionserver.env.example
+++ b/detectionserver.env.example
@@ -13,7 +13,7 @@ TOPIC_CAT=frigate/CamName/cat
 YOLO_MODEL_PATH=/opt/catdetect/models/your-yolo-model.pt
 
 # Image Capture
-IMAGE_URL=http://your-frigate-host:5000/camera-name/latest.jpg
+IMAGE_URL=http://your-frigate-host:5000/api/camera-name/latest.jpg
 SAVE_FOLDER=/opt/catdetect/images
 TEMP_DIR=/tmp/catdetect_temp
 OUTPUT_GIF=/tmp/catgif.gif
