--- a/detectionserver.env.example
+++ b/detectionserver.env.example
@@ -16,7 +16,7 @@ YOLO_MODEL_PATH=/opt/catdetect/models/your-yolo-model.pt
 IMAGE_URL=http://your-frigate-host:5000/api/camera-name/latest.jpg
 SAVE_FOLDER=/opt/catdetect/images
 TEMP_DIR=/tmp/catdetect_temp
-OUTPUT_GIF=/tmp/catgif.gif
+OUTPUT_VIDEO=/tmp/catvideo.mp4
 
 # Telegram Bot
 TELEGRAM_BOT_TOKEN=123456789:your_telegram_bot_token
